# testops-insights

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  testops.yaml
testops_insight/analytics/: __init__.py  flaky_detection.py  frequent_failures.py  health_score.py  slow_tests.py  trends.py
testops_insight/cli/: config.py  discovery.py  main.py
testops_insight/domain/: __init__.py  models.py
testops_insight/ingestion/: __init__.py  junit_parser.py
testops_insight/reporting/: __init__.py  html_generator.py  report_generator.py
tests/: test_flaky_detection.py  test_frequent_failures.py  test_health_score.py  test_junit_parser.py  test_slow_tests.py
